[SportBook Update] Pinnacle : fix pinnacle test case to 100% with sport core changes