@@ -5,9 +5,8 @@ import com.nextgen.gameaggregator.entity.ga.GameSession;
 import com.nextgen.gameaggregator.entity.ga.HttpRequestLog;
 import com.nextgen.gameaggregator.service.GameSessionService;
 import com.nextgen.gameaggregator.service.HttpService;
-import com.nextgen.gameaggregator.service.WalletService;
-import com.nextgen.gameaggregator.vendor.pinnacle.api.accept.AcceptService;
 import com.nextgen.gameaggregator.vendor.pinnacle.api.bet.BetService;
+import com.nextgen.gameaggregator.vendor.pinnacle.api.confirmbet.AcceptService;
 import com.nextgen.gameaggregator.vendor.pinnacle.api.refund.RefundService;
 import com.nextgen.gameaggregator.vendor.pinnacle.api.settled.SettledService;
 import com.nextgen.gameaggregator.vendor.pinnacle.api.unsettle.UnsettleService;
@@ -27,9 +26,11 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.math.BigDecimal;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -44,8 +45,6 @@ public class GeneralAction {
     @Autowired
     private SettledService settledService;
     @Autowired
-    private WalletService walletService;
-    @Autowired
     private GameSessionService gameSessionService;
     @Autowired
     private RefundService refundService;
@@ -55,100 +54,73 @@ public class GeneralAction {
     @PostMapping(path = "/{agentcode}/wagering/usercode/{usercode}/request/{requestid}")
     public ResponseVo handleApiCall(@PathVariable String agentcode, @PathVariable String usercode, @PathVariable String requestid, HttpServletRequest request) {
         HttpRequestLog httpRequestLog = httpService.start(request);
+
+        List<CommonVo> commonVos = Collections.emptyList();
         ResponseVo responseVo = new ResponseVo();
-        Integer errorCode = ResponseCode.UNKNOWN_ERROR.code;
+        ResultVo resultVo = new ResultVo();
+        CommonVo commonVo = new CommonVo();
 
         try {
             String body = httpRequestLog.getRequestBody();
             ObjectMapper objectMapper = new ObjectMapper();
             ActionsDto dto = objectMapper.readValue(body, ActionsDto.class);
 
+            if (dto.getActions().iterator().hasNext()) {
+                Action action = dto.getActions().iterator().next();
+
+                commonVo.setId(action.getId());
+                Optional.ofNullable(action.getTransaction()).ifPresent(data -> commonVo.setTransactionId(data.getTransactionId()));
+                Optional.ofNullable(action.getWagerInfo()).ifPresent(data -> commonVo.setWagerId(data.getWagerId()));
+                Optional.ofNullable(action.getPlayerInfo()).ifPresent(data -> resultVo.setUserCode(data.getUserCode()));
+            }
+
             // Get game session with username
             GameSession gameSession;
-            if (Set.of("BETTED", "ACCEPTED").contains(dto.getActions().get(0).getName().toUpperCase())) {
-                gameSession = gameSessionService.getGameSessionByVendorPlayerUsername(dto.getActions().get(0).getPlayerInfo().getUserCode());
+            if (Set.of("BETTED", "ACCEPTED").contains(dto.getActions().iterator().next().getName().toUpperCase())) {
+                gameSession = gameSessionService.getGameSessionByVendorPlayerUsername(dto.getActions().iterator().next().getPlayerInfo().getUserCode());
             } else {
                 gameSession = null;
             }
 
-            // Create a set to store action name
-            Set<String> uniqueActionNames = new HashSet<>();
+            // Process Data
+            List<CompletableFuture<CommonVo>> futures = dto.getActions().stream()
+                    .map(action -> CompletableFuture.supplyAsync(() -> actionsSwitching(action, gameSession, httpRequestLog)))
+                    .toList();
 
-            List<CompletableFuture<List<CommonVo>>> futures = dto.getActions().stream()
-                    .filter(action -> uniqueActionNames.add(action.getName())) // Only consider unique action names
-                    .map(action -> CompletableFuture.supplyAsync(() -> actionsSwitching(action.getName(), dto, gameSession, httpRequestLog)))
-                    .collect(Collectors.toList());
-
-            CompletableFuture<Void> allOf = CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]));
-            allOf.join(); // Wait for all services to complete
+            CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
 
             // Combine the results
-            List<CommonVo> commonVos = futures.stream()
+            commonVos = futures.stream()
                     .map(CompletableFuture::join)
-                    .flatMap(List::stream) // Flatten the list of lists into a single list
-                    .collect(Collectors.toList());
+                    .toList();
 
-            responseVo = mergeResponses(commonVos, dto.getActions().get(0));
 
         } catch (Exception exception) {
             httpService.logError(httpRequestLog, exception);
-            responseVo.setErrorCode(errorCode);
+            commonVo.setResponseCode(ResponseCode.UNKNOWN_ERROR.code);
 
         } finally {
+            resultVo.setAvailableBalance((commonVos.isEmpty() || commonVos.iterator().next().getBalance() == null) ? BigDecimal.ZERO : commonVos.iterator().next().getBalance());
+            resultVo.setActions(commonVos.isEmpty() ? Collections.singletonList(commonVo) : commonVos);
+            if (commonVos.stream().anyMatch(CommonVo::getSetResponseVoErrorCode))
+                responseVo.setErrorCode(ResponseCode.UNKNOWN_ERROR.code);
+            responseVo.setResult(resultVo);
             httpService.end(httpRequestLog, responseVo);
         }
 
         return responseVo;
     }
 
-    private List<CommonVo> actionsSwitching(String actionName, ActionsDto dto, GameSession gameSession, HttpRequestLog httpRequestLog) {
-        List<CommonVo> commonVos = new ArrayList<>();
+    private CommonVo actionsSwitching(Action action, GameSession gameSession, HttpRequestLog httpRequestLog) {
 
-        try {
-            switch (actionName) {
-                case "BETTED" -> commonVos.addAll(betService.bet(dto, gameSession, httpRequestLog));
-                case "ACCEPTED" -> commonVos.addAll(acceptService.accept(dto, gameSession, httpRequestLog));
-                case "SETTLED" -> commonVos.addAll(settledService.settled(dto, httpRequestLog));
-                case "REJECTED", "ROLLBACKED", "CANCELLED" ->
-                        commonVos.addAll(refundService.refund(dto, httpRequestLog));
-                case "UNSETTLED" -> commonVos.addAll(unsettleService.unsettle(dto, httpRequestLog));
-                default -> {
-                    CommonVo commonVo = new CommonVo();
-                    commonVo.setResponseCode(ResponseCode.UNKNOWN_ERROR.code);
-                    commonVos.add(commonVo);
-                }
-            }
-        } catch (Exception e) {
-            CommonVo commonVo = new CommonVo();
-            commonVo.setResponseCode(ResponseCode.UNKNOWN_ERROR.code);
-            commonVos.add(commonVo);
-        }
-
-        return commonVos;
-    }
-
-    private ResponseVo mergeResponses(List<CommonVo> commonVos, Action action) {
-        ResponseVo responseVo = new ResponseVo();
-        ResultVo result = new ResultVo();
-
-        try {
-            // Check if any CommonVo has error
-            boolean hasUnknownError = commonVos.stream().anyMatch(commonVo -> commonVo.getResponseCode() != 0);
-
-            result.setUserCode(action.getPlayerInfo().getUserCode());
-            result.setAvailableBalance(Optional.ofNullable(commonVos.get(commonVos.size() - 1).getBalance()).orElse(BigDecimal.ZERO));
-            result.setActions(commonVos);
-
-            // Set errorCode based on the condition
-            responseVo.setErrorCode(hasUnknownError ? ResponseCode.UNKNOWN_ERROR.code : ResponseCode.SUCCESS.code);
-
-            responseVo.setResult(result);
-
-        } catch (Exception e) {
-            log.error("Exception: " + e.getMessage());
-        }
-
-        return responseVo;
+        return switch (action.getName().toUpperCase()) {
+            case "BETTED" -> betService.bet(action, gameSession, httpRequestLog);
+            case "ACCEPTED" -> acceptService.accept(action, gameSession, httpRequestLog);
+            case "SETTLED" -> settledService.settled(action, httpRequestLog);
+            case "REJECTED", "ROLLBACKED", "CANCELLED" -> refundService.refund(action, httpRequestLog);
+            case "UNSETTLED" -> unsettleService.unsettle(action, httpRequestLog);
+            default -> throw new IllegalStateException("Unexpected value: " + action.getName());
+        };
     }
 }
 
